--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <td>  <img src="images/Headshot.jpg" alt="Didi's profile picture" style="width:100px;height:130px;"></td>
       <td><h1>Didi Dodson</h1>
-      <p><em>Software Developer</em><br>
+      <p><em>Software Developer and Technical Writer</em><br>
       <a href="https://github.com/DidiDodson"><img src="images/GitHub-Mark-32px.png" alt="GitHub logo" style="width:20px;height:20px;"></a>
       <a href="https://www.linkedin.com/in/didi-dodson"><img src="images/LI-In-Bug.png" alt="LinkedIn logo" style="width:20px;height:20px;"></a>
       <p> As a former Technical Writer/Editor in Aerospace and an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple complex products for a single project. Today, as a Backend Developer, I can combine project management, time, and people management skills with helping tech teams to develop and deliver quality products.<br>
@@ -94,7 +94,7 @@
     </ul>
     <li><strong>Turing School of Software and Design</strong></li>
     <ul>
-      <li>Anticipated Graduation Date: March 2022</li>
+      <li>Graduation Date: March 2022</li>
       <li>Certificate in Backend Development - focus on Ruby on Rails</li>
       <li>Skills and Technologies: Ruby, Ruby on Rails, test driven development, RSpec, API consumption and exposure, authenitication and security (including bcrypt and sessions), database design, PostgresQL, project devlopment, communications and teamwork, CLI</li>
     </ul>
