--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <tr>
       <td>  <img src="images/Headshot.jpg" alt="Didi's profile picture" style="width:100px;height:130px;"></td>
       <td><h1>Didi Dodson</h1>
-      <p><em>Software Developer and Technical Writer</em><br>
+      <p><em>Software Developer at Worklete</em><br>
       <a href="https://github.com/DidiDodson"><img src="images/GitHub-Mark-32px.png" alt="GitHub logo" style="width:20px;height:20px;"></a>
       <a href="https://www.linkedin.com/in/didi-dodson"><img src="images/LI-In-Bug.png" alt="LinkedIn logo" style="width:20px;height:20px;"></a>
-      <p> As a former Technical Writer/Editor in Aerospace and an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple complex products for a single project. Today, as a Backend Developer, I can combine project management, time, and people management skills with helping tech teams to develop and deliver quality products.<br>
+      <p> As a former Technical Writer/Editor in Aerospace and an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple complex products for a single project. Today, as a Software Developer, I can combine project management, time, and people management skills with helping tech teams to develop and deliver quality products.<br>
       Former colleagues have told me they appreciate my systematic approach to problem-solving, my positive attitude, my ability to communicate effectively under stressful circumstances, my tenacity, and my ability to organize work. I hope to continue applying these skills and abilities to my future career as a software developer.</p></td>
       <td></td>
     </tr>
@@ -89,7 +89,6 @@
     <li><strong>Udemy 2022 Complete Web Development Bootcamp</strong></li>
     <ul>
       <li>Currently enrolled</li>
-      <li>Expected end date: March 2022</li>
       <li>Skills and Technologies: HTML, CSS, Bootstrap, Javascript ES6, Unix Command Line, Node.js, Express.js, MongoDB, Mongoose, React.js</li>
     </ul>
     <li><strong>Turing School of Software and Design</strong></li>
@@ -125,6 +124,16 @@
       <th>Location</th>
       <th>Job Title</th>
       <th>Description</th>
+      <tr>
+        <td>2022-Present</td>
+        <td>Worklete</td>
+        <td>Remote</td>
+        <td>Software Developer</td>
+        <td><ul>
+          <li> New feature development (backend) in coordination with frontend developer </li>
+          <li> De-bugging app to support customer success </li>
+        </ul></td>
+      </tr>
     <tr>
       <td>2019-2021</td>
       <td>Ball Aersopace</td>
