--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Didi Dodson's Site</title>
+  <title>Didi Watson's Site</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -11,8 +11,8 @@
   <table cellspacing="10">
     <tr>
       <td>  <img src="images/Headshot.jpg" alt="Didi's profile picture" style="width:100px;height:130px;"></td>
-      <td><h1>Didi Dodson</h1>
-      <p><em>Software Developer at Worklete</em><br>
+      <td><h1>Didi Watson</h1>
+      <p><em>Software Developer at StrongArm</em><br>
       <a href="https://github.com/DidiDodson"><img src="images/GitHub-Mark-32px.png" alt="GitHub logo" style="width:20px;height:20px;"></a>
       <a href="https://www.linkedin.com/in/didi-dodson"><img src="images/LI-In-Bug.png" alt="LinkedIn logo" style="width:20px;height:20px;"></a>
       <p> As a former Technical Writer/Editor in Aerospace and an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple complex products for a single project. Today, as a Software Developer, I can combine project management, time, and people management skills with helping tech teams to develop and deliver quality products.<br>
@@ -86,6 +86,11 @@
 <hr>
   <h2>Education</h2>
   <ul>
+    <li><strong>Udemy 100 Days of Python</strong></li>
+    <ul>
+      <li>Currently enrolled</li>
+      <li>Learn Python in 100 days</li>
+    </ul>
     <li><strong>Udemy 2022 Complete Web Development Bootcamp</strong></li>
     <ul>
       <li>Currently enrolled</li>
