--- a/hobbies.html
+++ b/hobbies.html
@@ -8,18 +8,36 @@
   <body>
     <a href="index.html">Back</a>
     <h1>More About Me</h1>
-      <h2>My Interests</h2>
-        <ul>
-          <li>Cooking and food culture</li>
-          <li>Japanese language and culture</li>
-          <li>Fitness and wellness</li>
-          <li>Outdoor Adventures (camping, hiking, disc golf, etc.)</li>
-          <li>Travel</li>
-          <li>Languages and language learning</li>
-          <li>Sustainability</li>
-          <li>Green living</li>
-          <li>Lifelong learning</li>
-          <li>Photography</li>
-        </ul>
+    <h2>My Cats</h2>
+    <p>Trixie - American Shorthair - 6 years old</p>
+    <td><img src="images/Trixie.png" alt="Trixie" style="width:130px;height:130px;"></td>
+    <p>Yuki - American Shorthair - 17 years old</p>
+    <td><img src="images/Yuki.png" alt="Yuki" style="width:130px;height:130px;"></td>
+    <p>Rick - Bombay mix - 7 years old</p>
+    <td><img src="images/Rick.png" alt="Rick" style="width:140px;height:130px;"></td>
+    <h2>Travel</h2>
+    <p>I love to travel and I've been lucky enough to be able to travel extensively. Some of my favorite destinations have been:</p>
+    <ul>
+      <li>Slovenia</li>
+      <li>Croatia</li>
+      <li>Nepal</li>
+      <li>Vietnam</li>
+      <li>Crete</li>
+      <li>New Zealand</li>
+      <li>Japan</li>
+    </ul>
+
+    <h2>My Interests</h2>
+      <ul>
+        <li>Cooking and food culture</li>
+        <li>Japanese language and culture</li>
+        <li>Fitness and wellness</li>
+        <li>Outdoor Adventures (camping, hiking, disc golf, etc.)</li>
+        <li>Languages and language learning</li>
+        <li>Sustainability</li>
+        <li>Green living</li>
+        <li>Lifelong learning</li>
+        <li>Photography</li>
+      </ul>
   </body>
 </html>
