--- a/index.html
+++ b/index.html
@@ -10,92 +10,82 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td>  <img src="images/Headshot.jpg" alt="Didi's profile picture" style="width:100px;height:130px;"></td>
+      <td>  <img src="images/Headshot.jpg" alt="Didi's profile picture" style="width:200px;height:130px;"></td>
       <td><h1>Didi Watson</h1>
-      <p><em>Software Developer at StrongArm</em><br>
-      <a href="https://github.com/DidiDodson"><img src="images/GitHub-Mark-32px.png" alt="GitHub logo" style="width:20px;height:20px;"></a>
-      <a href="https://www.linkedin.com/in/didi-dodson"><img src="images/LI-In-Bug.png" alt="LinkedIn logo" style="width:20px;height:20px;"></a>
-      <p> As a former Technical Writer/Editor in Aerospace and an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple complex products for a single project. Today, as a Software Developer, I can combine project management, time, and people management skills with helping tech teams to develop and deliver quality products.<br>
-      Former colleagues have told me they appreciate my systematic approach to problem-solving, my positive attitude, my ability to communicate effectively under stressful circumstances, my tenacity, and my ability to organize work. I hope to continue applying these skills and abilities to my future career as a software developer.</p></td>
-      <td></td>
+        <p><em>Software Engineer at Worklete/StrongArm Technologies</em><br>
+        <a href="https://github.com/DidiDodson"><img src="images/GitHub-Mark-32px.png" alt="GitHub logo" style="width:20px;height:20px;"></a>
+        <a href="https://www.linkedin.com/in/didi-dodson"><img src="images/LI-In-Bug.png" alt="LinkedIn logo" style="width:20px;height:20px;"></a>
+        <h3>Professional Style</h3>
+        <p>Building on my previous roles as a Technical Writer/Editor in aerospace and as an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple, complex products for a single project. Today, as a Software Engineer, I combine project and time management with strong communication skills to help my team succeed and deliver quality products to our customers. Former colleagues have told me they appreciate my systematic approach to problem-solving, my positive attitude, my ability to communicate effectively under stressful circumstances, my tenacity, and my ability to organize work.</p>
+        <h3>Recent Work</h3>
+        <h4>Completion of Learning API Technical Writing: JSON and XML</h4>
+        <p>Description: Udemy course focused on preparing technical writers to develop documentation for API requests and responses formatted as either XML or JSON.</p> <a href="https://github.com/DidiDodson/XMLJSONDocumentationProjects">View Completed Course Projects on GitHub</a>
+        <h4>Enrolled in Technical Writing: How to Write Using DITA XML</h4>
+        <p>Description: Udemy course that teaches how to write in DITA XML and how to organize projects.</p>
+        <h4>Software Engineering Experience</h4>
+        <p> As a software engineer at Worklete and StrongArm since 2022, I've had the pleasure of working on multiple projects utilized by both both internal and external customers.</p>
+        <ul>
+          <li><strong>Worklete (2022-2023)</strong></li>
+          <ul>
+            <li>Languages: Ruby, Javascript, CSS, HTML, Markdown</li>
+            <li>Frameworks/Libraries: Rails, React</li>
+            <li>Database: PostgreSQL</li>
+            <li>Test suite: Minitest</li>
+            <li>Other technologies: Material UI, Docker, Docker Compose, Sidekiq/Cron, Redis</li>
+            <li>Maintained and updated documentation including database schema, Readme markdown files, GitHub wiki/how-to guide</li>
+            <li>Developed and exposed API endpoints to feed data to both a Ruby on Rails frontend and React injects to an external learning management system</li>
+            <li>Ingested external API endpoints to pull data from an external learning management system (Litmos)</li>
+            <li>Developed features and user interface improvements that increased the value and usability of our product</li>
+            <li>Accessed and manipulated data stored in our internal PostgresQL database via the command line</li>
+            <li>Created data visualizations to display data and statistics</li>
+            <li>Debugging and problem solving</li>
+          </ul>
+          <li><strong>StrongArm Technologies Projects (2023-2024)</strong></li>
+          <ul>
+            <li>Languages: Python, Javascript, CSS, HTML, Markdown</li>
+            <li>Frameworks/Libraries: Flask, React</li>
+            <li>Database: MySQL</li>
+            <li>Test suite: Pytest</li>
+            <li>Other Technologies: Docker, Docker Compose, APScheduler, Redis, react-select, react-datagrid, SqlAlchemy</li>
+            <li>Developed new internal user interface using Python/Flask (backend) and Javascript/React (frontend): conception to production deployment</li>
+            <li>Authored system documentation including readme markdown files, GitHub wiki, and system User Manual</li>
+            <li>Developed and exposed API endpoints to feed data to React frontend</li>
+            <li>Consumed external API endpoints to pull data from an external learning management system (Absorb)</li>
+            <li>Organized, abstracted, and refactored code to improve usability within Flask framework</li>
+        </ul><br>
+      </td>
     </tr>
   </table>
   <hr>
-  <h2>Skills</h2>
+  <h2>Technologies</h2>
   <table cellspacing="10">
     <tr>
       <td><table>
         <tr>
-          <td>Ruby on Rails</td>
+          <td>Languages: Python, Ruby, Javascript, HTML, CSS, Markdown</td>
         </tr>
         <tr>
-          <td>HTML</td>
+          <td>Frameworks/Libraries: Rails, Flask, React</td>
         </tr>
         <tr>
-          <td>PostgresQL</td>
-        </tr>
-      </table></td>
-      <td><table>
-        <tr>
-          <td>Test Driven Development</td>
+          <td>Testing: RSpec, Minitest, Pytest</td>
         </tr>
         <tr>
-          <td>RSpec</td>
+          <td>Other Technologies: Docker, Docker Compose, SqlAlchemy, APScheduler, Redis, Sidekiq/Cron</td>
         </tr>
         <tr>
-          <td>Git/GitHub</td>
-        </tr>
-      </table></td>
-      <td><table>
-        <tr>
-          <td>Sharepoint</td>
+          <td>Other Tools: Asana, Jira, Confluence, Bugsnag, Heroku, AWS, Git/Github</td>
         </tr>
         <tr>
-          <td>Project Management</td>
-        </tr>
-        <tr>
-          <td>Microsoft Teams</td>
-        </tr>
-      </table></td>
-      <td>
-        <table>
-          <tr>
-            <td>API Consumption/Exposure</td>
-          </tr>
-          <tr>
-            <td>Intermediate-Advanced Microsoft Office</td>
-          </tr>
-          <tr>
-            <td>Technical Writing and Editing</td>
-          </tr>
-        </table>
-      </td>
-      <td><table>
-        <tr>
-          <td>Technical Writing/Editing</td>
-        </tr>
-        <tr>
-          <td>Templates in Microsoft Word and PowerPoint</td>
-        </tr>
-        <tr>
-          <td>Markdown</td>
+          <td>Other Skills: Sharepoint, intermediate-advanced Microsoft Office, Microsoft Teams, Microsoft Word and PowerPoint templates, Adobe Pro, Slack</td>
         </tr>
       </table></td>
     </tr>
-  </table>
+  </table> 
+      
 <hr>
   <h2>Education</h2>
   <ul>
-    <li><strong>Udemy 100 Days of Python</strong></li>
-    <ul>
-      <li>Currently enrolled</li>
-      <li>Learn Python in 100 days</li>
-    </ul>
-    <li><strong>Udemy 2022 Complete Web Development Bootcamp</strong></li>
-    <ul>
-      <li>Currently enrolled</li>
-      <li>Skills and Technologies: HTML, CSS, Bootstrap, Javascript ES6, Unix Command Line, Node.js, Express.js, MongoDB, Mongoose, React.js</li>
-    </ul>
     <li><strong>Turing School of Software and Design</strong></li>
     <ul>
       <li>Graduation Date: March 2022</li>
@@ -131,12 +121,12 @@
       <th>Description</th>
       <tr>
         <td>2022-Present</td>
-        <td>Worklete</td>
+        <td>Worklete/StrongArm Technologies</td>
         <td>Remote</td>
-        <td>Software Developer</td>
+        <td>Software Engineer</td>
         <td><ul>
-          <li> New feature development (backend) in coordination with frontend developer </li>
-          <li> De-bugging app to support customer success </li>
+          <li>Frontend and Backend Development (see details in above section "Recent Work")</li>
+          <li>Reference available upon request</li>
         </ul></td>
       </tr>
     <tr>
@@ -145,8 +135,8 @@
       <td>Broomfield, CO</td>
       <td>Technical Writer/Editor III - National Defense Team Lead</td>
       <td><ul>
-        <li> Led team of five technical editors to produce high-quality deliverables (proposals and program milestone documentation) for potential and awarded government contracts </li>
-        <li> Interfaced directly with over 70 internal customers to edit, format, and publish technical documentation under strict deadlines </li>
+        <li>Led team of five technical editors to produce high-quality deliverables (proposals and program milestone documentation) for potential and awarded government contracts </li>
+        <li>Interfaced directly with over 70 internal customers to edit, format, and publish technical documentation under strict deadlines </li>
         <li>Interfaced with executive leadership to support the National Defense business unit and company-wide strategic goals</li>
         <li>Supported Marketing and Communications functions as needed (such as researching and writing stories for company website)</li>
       </ul></td>
@@ -155,11 +145,12 @@
       <td>2015-2019</td>
       <td>Booz Allen Hamilton</td>
       <td>Honolulu, HI</td>
-      <td>Irregular Warfare Analyst supporting the Asia_pacific Counter-IED Fusion Center (APCFC)</td>
+      <td>Irregular Warfare Analyst supporting the Asia-Pacific Counter-IED Fusion Center (APCFC)</td>
       <td><ul>
         <li> Senior writer and editor of the APCFC flagship product, responsible for synthesizing and unifying the voice of 13 intelligence analysts on topics related to terrorism and counterterrorism in the Indo-Pacific Region </li>
         <li> Created data visualizations for use in intelligence products </li>
-        <li>Engaged with domestic intelligence community and partner nations’ militaries in support of contract requirement</li>
+        <li>Engaged with domestic intelligence community and partner nations' militaries in support of contract requirements</li>
+        <li>Writing samples available upon request</li>
       </ul></td>
     </tr>
     <tr>
