update API info

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <li>Test suite: Minitest</li>
             <li>Other technologies: Material UI, Docker, Docker Compose, Sidekiq/Cron, Redis</li>
             <li>Maintained and updated documentation including database schema, Readme markdown files, GitHub wiki/how-to guide</li>
-            <li>Developed and exposed API endpoints to feed data to both a Ruby on Rails frontend and React injects to an external learning management system</li>
-            <li>Ingested external API endpoints to pull data from an external learning management system (Litmos)</li>
+            <li>Developed and exposed web API (RESTful API and others) endpoints to feed data to both a Ruby on Rails frontend and React injects to an external learning management system</li>
+            <li>Ingested external web API (RESTful API) endpoints to pull data from an external learning management system (Litmos)</li>
             <li>Developed features and user interface improvements that increased the value and usability of our product</li>
-            <li>Accessed and manipulated data stored in our internal PostgresQL database via the command line</li>
+            <li>Accessed and manipulated data stored in our internal PostgreSQL database via the command line</li>
             <li>Created data visualizations to display data and statistics</li>
             <li>Debugging and problem solving</li>
           </ul>
@@ -49,8 +49,8 @@
             <li>Other Technologies: Docker, Docker Compose, APScheduler, Redis, react-select, react-datagrid, SqlAlchemy</li>
             <li>Developed new internal user interface using Python/Flask (backend) and Javascript/React (frontend): conception to production deployment</li>
             <li>Authored system documentation including readme markdown files, GitHub wiki, and system User Manual</li>
-            <li>Developed and exposed API endpoints to feed data to React frontend</li>
-            <li>Consumed external API endpoints to pull data from an external learning management system (Absorb)</li>
+            <li>Developed and exposed web API (RESTful API) endpoints to feed data to React frontend</li>
+            <li>Consumed external web API (RESTful API) endpoints to pull data from an external learning management system (Absorb)</li>
             <li>Organized, abstracted, and refactored code to improve usability within Flask framework</li>
         </ul><br>
       </td>
@@ -62,7 +62,7 @@
     <tr>
       <td><table>
         <tr>
-          <td>Languages: Python, Ruby, Javascript, HTML, CSS, Markdown</td>
+          <td>Languages: Python, Ruby, Javascript, HTML, CSS, Markdown, XML</td>
         </tr>
         <tr>
           <td>Frameworks/Libraries: Rails, Flask, React</td>
