--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </tr>
   </table>
   <hr>      
-  <h3>Professional Style</h3>
+  <h3>Professional Style and Values</h3>
   <p>Building on my previous roles as a Technical Writer/Editor in aerospace and as an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple, complex products for a single project. Today, as a Software Engineer, I combine project and time management with strong communication skills to help my team succeed and deliver quality products to our customers. Former colleagues have told me they appreciate my systematic approach to problem-solving, my positive attitude, my ability to communicate effectively under stressful circumstances, my tenacity, and my ability to organize work.</p>
   <h3>Recent Work</h3>
   <h4>Completion of Learning API Technical Writing: JSON and XML</h4>
@@ -60,29 +60,13 @@
   </ul>  
   <hr>
   <h2>Technologies</h2>
-  <table cellspacing="10">
-    <tr>
-      <td><table>
-        <tr>
-          <td>Languages: Python, Ruby, Javascript, HTML, CSS, Markdown, XML</td>
-        </tr>
-        <tr>
-          <td>Frameworks/Libraries: Rails, Flask, React</td>
-        </tr>
-        <tr>
-          <td>Testing: RSpec, Minitest, Pytest</td>
-        </tr>
-        <tr>
-          <td>Other Technologies: Docker, Docker Compose, SqlAlchemy, APScheduler, Redis, Sidekiq/Cron</td>
-        </tr>
-        <tr>
-          <td>Other Tools: Asana, Jira, Confluence, Bugsnag, Heroku, AWS, Git/Github</td>
-        </tr>
-        <tr>
-          <td>Other Skills: Sharepoint, intermediate-advanced Microsoft Office, Microsoft Teams, Microsoft Word and PowerPoint templates, Adobe Pro, Slack</td>
-        </tr>
-      </table></td>
-    </tr>
+  <table>
+    <tr><strong>Languages: </strong>Python, Ruby, Javascript, HTML, CSS, Markdown, XML, JSON</tr><br>
+    <tr><strong>Frameworks/Libraries: </strong> Rails, Flask, React</tr><br>
+    <tr><strong>Testing: </strong>RSpec, Minitest, Pytest</tr><br>  
+    <tr><strong>Other Technologies: </strong>Docker, Docker Compose, SqlAlchemy, APScheduler, Redis, Sidekiq/Cron</tr><br>
+    <tr><strong>Other Tools: </strong>Asana, Jira, Confluence, Bugsnag, Heroku, AWS, Git/Github</tr><br>
+    <tr><strong>Other Skills: </strong>Technical Writing and Editing, Sharepoint, intermediate-advanced Microsoft Office, Microsoft Teams, Microsoft Word and PowerPoint templates, Adobe Pro, Slack</tr><br><br>
   </table> 
       
 <hr>
@@ -92,7 +76,7 @@
     <ul>
       <li>Graduation Date: March 2022</li>
       <li>Certificate in Backend Development - focus on Ruby on Rails</li>
-      <li>Skills and Technologies: Ruby, Ruby on Rails, test driven development, RSpec, API consumption and exposure, authenitication and security (including bcrypt and sessions), database design, PostgresQL, project devlopment, communications and teamwork, CLI</li>
+      <li>Skills and Technologies: Ruby, Ruby on Rails, test driven development, RSpec, API consumption and exposure, authenitication and security (including bcrypt and sessions), database design, PostgreSQL, project devlopment, communications and teamwork, CLI</li>
     </ul>
     <li><strong>University of Hawaiʻi at Mānoa</strong></li>
     <ul>
