--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h4>Enrolled in Technical Writing: How to Write Using DITA XML</h4>
   <p>Description: Udemy course that teaches how to write in DITA XML and how to organize projects.</p>
   <h4>Software Engineering Experience</h4>
-  <p> As a software engineer at Worklete and StrongArm since 2022, I've had the pleasure of working on multiple projects utilized by both both internal and external customers.</p>
+  <p> As a software engineer at Worklete and StrongArm, I had the pleasure of working on multiple projects utilized by both both internal and external customers.</p>
   <ul>
     <li><strong>Worklete (2022-2023)</strong></li>
     <ul>
@@ -65,7 +65,7 @@
     <tr><strong>Frameworks/Libraries: </strong> Rails, Flask, React</tr><br>
     <tr><strong>Testing: </strong>RSpec, Minitest, Pytest</tr><br>  
     <tr><strong>Other Technologies: </strong>Docker, Docker Compose, SqlAlchemy, APScheduler, Redis, Sidekiq/Cron</tr><br>
-    <tr><strong>Other Tools: </strong>Asana, Jira, Confluence, Bugsnag, Heroku, AWS, Git/Github</tr><br>
+    <tr><strong>Other Tools: </strong>Asana, Jira, Confluence, Bugsnag, Heroku, AWS, Git/Github, CircleCI</tr><br>
     <tr><strong>Other Skills: </strong>Technical Writing and Editing, Sharepoint, intermediate-advanced Microsoft Office, Microsoft Teams, Microsoft Word and PowerPoint templates, Adobe Pro, Slack</tr><br><br>
   </table> 
       
@@ -106,7 +106,7 @@
       <th>Job Title</th>
       <th>Description</th>
       <tr>
-        <td>2022-Present</td>
+        <td>2022-2024</td>
         <td>Worklete/StrongArm Technologies</td>
         <td>Remote</td>
         <td>Software Engineer</td>
