Update about section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <td><img src="images/Headshot.jpg" style="width:100px;height:130px;" alt="Didi's profile picture"></td>
       <td><h1>Didi Watson</h1>
-        <p><em>Software Engineer at Worklete/StrongArm Technologies</em><br>
+        <p><em>Currently looking for employment</em><br>
         <a href="https://github.com/DidiDodson"><img src="images/GitHub-Mark-32px.png" alt="GitHub logo" style="width:20px;height:20px;"></a>
         <a href="https://www.linkedin.com/in/didi-watson"><img src="images/LI-In-Bug.png" alt="LinkedIn logo" style="width:20px;height:20px;"></a>
       </td>
@@ -20,7 +20,7 @@
   </table>
   <hr>      
   <h3>Professional Style and Values</h3>
-  <p>Building on my previous roles as a Technical Writer/Editor in aerospace and as an Irregular Warfare Analyst in the defense industry, I've had the pleasure of developing government deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. They often involved collaborating with subject matter experts or other analysts to create multiple, complex products for a single project. Today, as a Software Engineer, I combine project and time management with strong communication skills to help my team succeed and deliver quality products to our customers. Former colleagues have told me they appreciate my systematic approach to problem-solving, my positive attitude, my ability to communicate effectively under stressful circumstances, my tenacity, and my ability to organize work.</p>
+  <p>Building on my previous roles as a technical writer/editor in the aerospace industry, an irregular warfare analyst in the defense industry, and a software engineer in the private sector, I've had the pleasure of developing deliverables and products requiring intensive analysis, editing, and formatting under firm deadlines. My work often involved cross-functional collaboration with subject-matter experts or analysts to create multiple, complex products for a single project. I combine project and time management with strong communication skills to help my team succeed and deliver quality products to our customers. Former colleagues have told me they appreciate my systematic approach to problem-solving, my positive attitude, my ability to communicate effectively under stressful circumstances, my tenacity, and my ability to organize work.</p>
   <h3>Recent Work</h3>
   <h4>Completion of Learning API Technical Writing: JSON and XML</h4>
   <p>Description: Udemy course focused on preparing technical writers to develop documentation for API requests and responses formatted as either XML or JSON.</p> <a href="https://github.com/DidiDodson/XMLJSONDocumentationProjects">View Completed Course Projects on GitHub</a>
